--- a/includes/exhibitor-generator/assets/exhibitor-generator-style.css
+++ b/includes/exhibitor-generator/assets/exhibitor-generator-style.css
@@ -2,12 +2,14 @@
     display: flex;
     justify-content: center;
 }
+
 .exhibitor-generator__wrapper {
     display: flex;
     width: 100%;
-    max-width: 850px;
+    max-width: 1000px;
     min-height: 500px;
 }
+
 .exhibitor-generator__left {
     width: 40%;
     background-position: center;
@@ -15,15 +17,19 @@
     background-size: cover;
     border-radius: 20px 0 0 20px;
 }
+
 .pwe-exhibitor-visitor-generator .exhibitor-generator__left {
-    background-image:url(/wp-content/plugins/PWElements/includes/exhibitor-generator/assets/media/badgevip.jpg);
+    background-image: url(/wp-content/plugins/PWElements/includes/exhibitor-generator/assets/media/badgevip.jpg);
 }
+
 .pwe-exhibitor-worker-generator .exhibitor-generator__left {
-    background-image:url(/wp-content/plugins/PWElements/includes/exhibitor-generator/assets/media//badgevipmockup-wys.webp);
+    background-image: url(/wp-content/plugins/PWElements/includes/exhibitor-generator/assets/media//badgevipmockup-wys.webp);
 }
+
 .exhibitor-generator__left h3 {
     display: none;
 }
+
 .exhibitor-generator__right {
     width: 60%;
     display: flex;
@@ -32,17 +38,20 @@
     background: #EBEBEB;
     border-radius: 0 20px 20px 0;
 }
+
 .exhibitor-generator__right-title {
     text-align: center;
 }
+
 .exhibitor-generator__right-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 400px;
-    width: 100%;
+    /* max-width: 400px; */
+    width: 90%;
 }
+
 .exhibitor-generator__right h3 {
     text-align: center;
     color: #b79663 !important;
@@ -50,28 +59,35 @@
     font-size: 28px;
     padding: 0 10px;
 }
+
 .exhibitor-generator__right-icons h5 {
     text-align: center;
 }
+
 .exhibitor-generator__right-icons-wrapper {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 5px;
-    padding: 0 8px;
+    /* padding: 0 8px; */
 }
+
 .exhibitor-generator__right-icon {
+    flex: 1;
     max-width: 110px;
-    min-width: 40px;
+    min-width: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 8px;
     padding-top: 36px;
 }
+
 .exhibitor-generator__right-icon img {
     height: 50px;
     object-fit: contain;
 }
+
 .exhibitor-generator__right-icon p {
     padding: 0;
     margin: 0;
@@ -80,16 +96,19 @@
     line-height: inherit;
     text-align: center;
 }
+
 .exhibitor-generator__right-form {
     width: 100%;
     margin-top: 18px;
 }
+
 .exhibitor-generator__right-form li.gfield,
 .exhibitor-generator__right-form .gform_fields {
     padding-right: 0 !important;
     padding: 0 !important;
     list-style: none;
 }
+
 .exhibitor-generator__right-form .gfield:has(input[placeholder^="IMIĘ I NAZWISKO"]),
 .exhibitor-generator__right-form .gfield:has(input[placeholder^="NAME AND SURNAME"]),
 .exhibitor-generator__right-form .gfield:has(input[placeholder^="FIRMA ZAPRASZAJĄCA"]),
@@ -102,6 +121,7 @@
     border-radius: 5px !important;
     overflow: hidden;
 }
+
 .exhibitor-generator__right-form .gfield input[placeholder^="IMIĘ I NAZWISKO"],
 .exhibitor-generator__right-form .gfield input[placeholder^="NAME AND SURNAME"],
 .exhibitor-generator__right-form .gfield input[placeholder^="FIRMA ZAPRASZAJĄCA"],
@@ -120,17 +140,21 @@
     font-weight: 700;
     color: #555555;
 }
+
 .exhibitor-generator__right-form .gfield:has(input[placeholder^="IMIĘ I NAZWISKO"]),
 .exhibitor-generator__right-form .gfield:has(input[placeholder^="NAME AND SURNAME"]) {
     --icon-url: url("/wp-content/plugins/PWElements/includes/exhibitor-generator/assets/media/name.png");
 }
+
 .exhibitor-generator__right-form .gfield:has(input[placeholder^="FIRMA"]),
 .exhibitor-generator__right-form .gfield:has(input[placeholder^="INVITING"]) {
     --icon-url: url("/wp-content/plugins/PWElements/includes/exhibitor-generator/assets/media/box.png");
 }
+
 .exhibitor-generator__right-form .gfield:has(input[placeholder^="E-MAIL"]) {
     --icon-url: url("/wp-content/plugins/PWElements/includes/exhibitor-generator/assets/media/email.png");
 }
+
 .exhibitor-generator__right-form .gfield .ginput_container:before {
     content: "";
     left: 0;
@@ -144,6 +168,7 @@
     background-repeat: no-repeat;
     background-size: contain;
 }
+
 .exhibitor-generator__right-form input:-webkit-autofill,
 .exhibitor-generator__right-form input:-webkit-autofill:hover,
 .exhibitor-generator__right-form input:-webkit-autofill:focus {
@@ -151,9 +176,11 @@
     -webkit-box-shadow: 0 0 0px 40rem #D2D2D2 inset !important;
     transition: background-color 5000s ease-in-out 0s;
 }
+
 .exhibitor-generator__right-form .gform_footer {
     text-align: center;
 }
+
 .exhibitor-generator__right-form .gform_footer input[type="submit"],
 .btn-gold {
     background: #b79663 !important;
@@ -165,30 +192,37 @@
     font-weight: 600 !important;
     text-transform: uppercase;
 }
+
 .btn-gold {
     margin-bottom: 36px !important;
 }
+
 @media(max-width: 960px) {
     .exhibitor-generator__wrapper {
         flex-direction: column;
     }
+
     .exhibitor-generator__right {
         display: flex;
         width: 100%;
         border-radius: 0 0 20px 20px;
     }
+
     .exhibitor-generator__right-wrapper {
         padding: 18px;
     }
+
     .exhibitor-generator__right h3 {
         display: none;
     }
+
     .pwe-exhibitor-visitor-generator .exhibitor-generator__left,
     .pwe-exhibitor-worker-generator .exhibitor-generator__left {
         width: 100%;
         border-radius: 20px 20px 0 0;
-        background-image:url(/wp-content/plugins/PWElements/includes/exhibitor-generator/assets/media/gen-bg.jpg)
+        background-image: url(/wp-content/plugins/PWElements/includes/exhibitor-generator/assets/media/gen-bg.jpg)
     }
+
     .exhibitor-generator__left h3 {
         display: block;
         margin: 0;
@@ -198,29 +232,36 @@
         font-size: 28px;
     }
 }
+
 @media(max-width: 640px) {
     .exhibitor-generator__right-form .gform_footer {
         margin: 0 !important;
     }
+
     .exhibitor-generator__right-form input[type="submit"] {
         width: auto !important;
-        
+
     }
 }
+
 @media(max-width: 450px) {
     .exhibitor-generator__left h3 {
         font-size: 18px !important;
     }
+
     .exhibitor-generator__right-form input[type="text"],
     .exhibitor-generator__right-form input[type="email"] {
         font-size: 14px !important;
     }
+
     .exhibitor-generator__right-icons-wrapper {
         padding: 0;
     }
+
     .exhibitor-generator__right-icon img {
         height: 40px;
     }
+
     .exhibitor-generator__right-icon p {
         font-size: 12px;
     }
@@ -229,23 +270,24 @@
 
 
 /* Modal */
-@media (max-width: 961px){
-    .tabela-masowa{
-        display:none;
+@media (max-width: 961px) {
+    .tabela-masowa {
+        display: none;
     }
 }
-.modal__element{
+
+.modal__element {
     position: fixed !important;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     width: 100% !important;
     height: 100% !important;
     border: unset;
     background-color: rgba(128, 128, 128, 0.3);
 }
 
-.modal__element .inner{
-    position: relative;  
+.modal__element .inner {
+    position: relative;
     margin: 100px auto;
     background-color: #fff;
     padding: 1rem;
@@ -260,19 +302,19 @@
     text-align: center;
 }
 
-.modal__element .blocked{
+.modal__element .blocked {
     pointer-events: none;
 }
 
 .tabela-masowa {
-    width:unset !important;
+    width: unset !important;
 }
 
 .modal__element input {
     text-align: center;
     margin: 18px auto 0 auto;
 }
-    
+
 .modal__element input[type="text"] {
     width: 50%;
 }
@@ -287,42 +329,50 @@
     text-align: left;
 }
 
-.modal__element table{
+.modal__element table {
     text-align: center;
-    width:90%;
+    width: 90%;
 }
 
-.modal__element p{
+.modal__element p {
     text-align: center;
     margin: 0;
 }
-.modal__element table th{
-    width:50%;
+
+.modal__element table th {
+    width: 50%;
 }
-.modal__element table td{
+
+.modal__element table td {
     background-repeat: no-repeat;
     background-position: center;
     text-align: center;
     padding: 0;
 }
-.modal__element .mass-send-name:empty{
+
+.modal__element .mass-send-name:empty {
     background-image: url(/wp-content/plugins/PWElements/media/generator-wystawcow/generator-imiona.webp);
 }
-.modal__element .mass-send-email:empty{
+
+.modal__element .mass-send-email:empty {
     background-image: url(/wp-content/plugins/PWElements/media/generator-wystawcow/geneartor-emaile.webp);
 }
-.modal__element tr table{
+
+.modal__element tr table {
     text-align: center;
-    width:100%;
+    width: 100%;
     margin-top: 0;
 }
-.modal__element table input{
+
+.modal__element table input {
     margin-top: 0 !important;
 }
-.modal__element .error-color{
+
+.modal__element .error-color {
     color: red;
 }
-.modal__element .btn-close{
+
+.modal__element .btn-close {
     background-color: #b79663;
     padding: 0px 13px 5px 14px;
     border-radius: 50%;
@@ -334,57 +384,75 @@
     right: 10px;
     cursor: pointer;
 }
-.modal__element label{
+
+.modal__element label {
     font-weight: 600;
     font-size: 18px;
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
-.modal__element .zastepczy{
+
+.modal__element .zastepczy {
     color: #ccc;
-    font-style: italic; 
-} 
-.file-uloader{
+    font-style: italic;
+}
+
+.file-uloader {
     margin-top: 18px;
 }
+
 .file-selector {
-    display:flex;
-    gap:18px;
+    display: flex;
+    gap: 18px;
     justify-content: center;
     align-items: center;
     margin-top: 9px;
 }
-.file-selector :is(label, select){
+
+.file-selector :is(label, select) {
     width: 30%;
     min-width: 100px;
     margin: 0;
 }
-.file-selector select{
+
+.file-selector select {
     padding-right: 30px;
     cursor: pointer;
     background: #fff url(/wp-content/plugins/PWElements/media/arrow-down.png) no-repeat right 5px top 55%;
     background-size: 20px 20px;
 }
-.wyslij.btn-gold{
-    margin:18px !important;
+
+.wyslij.btn-gold {
+    margin: 18px !important;
 }
-.modal__element, .file-size-error, .file-size-info{
+
+.modal__element,
+.file-size-error,
+.file-size-info {
     display: none;
 }
-.info-box-sign{
+
+.info-box-sign {
     cursor: pointer;
     border: 2px solid;
     border-radius: 50%;
     font-weight: 800;
-    padding:1px 8px;
+    padding: 1px 8px;
 }
-.border-red{
+
+.border-red {
     border-color: red;
 }
-.file-size-info{
+
+.file-size-info {
     text-align: left;
     margin-top: 10px;
     padding: 10px;
@@ -396,30 +464,33 @@
     position: fixed;
     width: 400px;
 }
-.file-size-info :is(h5, ul){
+
+.file-size-info :is(h5, ul) {
     margin-top: 5px;
 }
 
-.file-size-info li{
+.file-size-info li {
     font-size: 14px;
     font-weight: 500;
 }
+
 .inner .spinner {
     height: 0 !important;
 }
 
-.btn-gen-file{
+.btn-gen-file {
     color: black;
     padding: 5px 10px;
     border: 1px solid black;
     border-radius: 10px;
 }
 
-.mass_checkbox, .badge_name input{
+.mass_checkbox,
+.badge_name input {
     border-color: black !important;
 }
 
-.mass_checkbox_label{
+.mass_checkbox_label {
     margin-top: 10px;
     font-size: 14px !important;
 }
