--- a/includes/store/assets/style.css
+++ b/includes/store/assets/style.css
@@ -510,7 +510,7 @@
     background-color: var(--gold-color);
     color: white !important;
 }
-.pwe-store__buy-button {
+.pwe-store__reservation-button {
     background-color: var(--gold-color);
     color: white !important;
     border: none;
@@ -521,11 +521,11 @@
     text-decoration: none;
     transition: 0.3s ease;
 }
-.pwe-store__buy-button:hover {
+.pwe-store__reservation-button:hover {
     background-color: var(--gold-color-hover);
 }
-.pwe-store__featured-service.sold-out .pwe-store__buy-button,
-.pwe-store__service-card.sold-out .pwe-store__buy-button {
+.pwe-store__featured-service.sold-out .pwe-store__reservation-button,
+.pwe-store__service-card.sold-out .pwe-store__reservation-button {
     background: #999;
     pointer-events: none;
     opacity: 0.5;
@@ -534,7 +534,7 @@
 .pwe-store__featured-service.sold-out .pwe-store__contact-button {
     display: none;
 }
-.pwe-store__redirect-button {
+.pwe-store__form-modal-open {
     display: flex;
     align-items: center;
 }
@@ -1028,4 +1028,88 @@
 /* Scrollbar buttons */
 .pwe-store__modal-content::-webkit-scrollbar-button {
     display: none; /* Ukrycie przycisków na pasku przewijania */
+}
+
+
+
+
+.pwe-store__form-modal {
+    display: none;
+    position: fixed !important;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
+}
+.pwe-store__form-modal-content {
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 20px;
+    border-radius: 8px;
+    width: 90%;
+    max-width: 500px;
+    position: relative;
+}
+.pwe-store__form-modal-title {
+    font-size: 20px !important;
+    margin: 0;
+}
+.pwe-store__form-modal-form {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
+.pwe-store__form-modal-form :is(label, input, p) {
+    margin: 0;
+}
+.pwe-store__form-modal-form label {
+    margin-top: 10px;
+}
+.pwe-store__form-modal-form input {
+    border: 1px solid #999 !important;
+}
+.pwe-store__form-modal-consent {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
+}
+.pwe-store__form-modal-consent p {
+    font-size: 14px;
+    line-height: 1.3;
+}
+.pwe-store__form-modal .show-consent {
+    cursor: pointer;
+}
+.pwe-store__form-modal-consent-desc {
+    font-size: 12px;
+    line-height: 1.3;
+    margin-top: 8px !important;
+}
+.pwe-store__form-modal-content button {
+    background-color: var(--gold-color);
+    color: white !important;
+    border: none;
+    padding: 8px 24px;
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 500;
+    text-decoration: none;
+    transition: 0.3s ease;
+    margin-top: 10px;
+}
+.pwe-store__form-modal-content button:hover {
+    background-color: var(--gold-color-hover);
+}
+.pwe-store__form-modal-close {
+    position: absolute;
+    right: 15px;
+    top: 10px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #aaa;
+    cursor: pointer;
 }
