--- a/includes/conference-cap/classes/conference-cap-full-mode/conference-cap-full-mode-style.css
+++ b/includes/conference-cap/classes/conference-cap-full-mode/conference-cap-full-mode-style.css
@@ -53,6 +53,32 @@
   color: var(--accent-color);
 }
 
+.conference_cap__lecture-speaker-flex {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 18px;
+}
+
+.conference_cap__lecture-speaker-flex .conference_cap__lecture-speaker-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 210px;
+    justify-content: space-between;
+}
+
+.conference_cap__lecture-speaker-flex .conference_cap__lecture-speaker-img {
+    display: flex;
+    justify-content: center;
+}
+
+.conference_cap__lecture-speaker-flex .conference_cap__lecture-name {
+    margin: 12px auto 0;
+    text-align: center;
+    max-width: 80%;
+}
+
 @media (max-width: 600px) {
 
   .conference_cap__lecture-box {
