--- a/includes/conference-cap/classes/conference-cap-full-mode/conference-cap-full-mode-style.css
+++ b/includes/conference-cap/classes/conference-cap-full-mode/conference-cap-full-mode-style.css
@@ -58,6 +58,7 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 18px;
+    margin-top: 36px;
 }
 
 .conference_cap__lecture-speaker-flex .conference_cap__lecture-speaker-item {
